--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "prisma": "^6.11.1"
   },
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.1.0",
@@ -29,6 +31,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
